# radioband

./: .gitignore  AGENTS.md  Cargo.toml  NOTES.md  README.md  Trunk.toml  build.sh  index.html
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md
.github/skills/radioband-rtlsdr/: SKILL.md
.github/workflows/: deploy.yml
crates/app-ui/: Cargo.toml
crates/app-ui/src/: lib.rs  waterfall.rs
crates/audio-bridge/: Cargo.toml
crates/audio-bridge/src/: lib.rs
crates/sdr-core/: Cargo.toml
crates/sdr-core/src/: lib.rs
crates/sdr-worker/: Cargo.toml
crates/sdr-worker/src/: lib.rs
crates/usb-rtl/: Cargo.toml
crates/usb-rtl/src/: lib.rs
docs/: app-ui.js  app-ui_bg.wasm  index.html
docs/worker-pkg/: sdr_worker.js  sdr_worker_bg.wasm
static/: audio-worklet-processor.js  style.css  worker.js
static/worker-pkg/: sdr_worker_bg.wasm
