[workspace]
resolver = "2"
members = [
    "crates/sdr-core",
    "crates/usb-rtl",
    "crates/audio-bridge",
    "crates/sdr-worker",
    "crates/app-ui",
]

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
rustfft = "6"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
