[package]
name = "audio-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "AudioDestinationNode",
    "GainNode",
    "AudioParam",
    "MessagePort",
    "Window",
    "console",
] }
